Bug 258534 - "create new" is always graid out in columns view
Summary: "create new" is always graid out in columns view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 259498 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-02 02:56 UTC by Jim Jones
Modified: 2010-12-15 20:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.0
Sentry Crash Report:


Attachments
picture showing the bug (159.95 KB, image/jpeg)
2010-12-02 13:39 UTC, Jim Jones
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Jones 2010-12-02 02:56:54 UTC
Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

"create new" is always graid out in columns view - maybe its called differnt in english version but i use the german version and there the option is called "Neu erstellen" when i do a right click into a column ...

Reproducible: Always
Comment 1 Jim Jones 2010-12-02 02:58:50 UTC
when i switch to the detail view and back to column view it works as expected .... but when dolphin starts in column view it doesnt work ....
Comment 2 Frank Reininghaus 2010-12-02 08:18:37 UTC
Thanks for the bug report! I could not reproduce the bug in trunk. What I did:

1. Open Dolphin -> shows the home folder in Details View for me.
2. Switch to Columns View and close Dolphin.
3. Open Dolphin again -> shows the home folder in Columns View.
4. Right-click the empty space in the column -> "Create New..." is enabled.

If different (or more) steps are required to reproduce the issue, please let us know. Thanks.
Comment 3 Jim Jones 2010-12-02 13:39:07 UTC
this also works for me as long i dont use the sidebar to get to an stored folder . after using it, going from /home to /mnt/data for example, "Create New" is always graid out ...
i marked the sidebar with a arrow to show you what i mean in the attached picture ...
Comment 4 Jim Jones 2010-12-02 13:39:34 UTC
Created attachment 53976 [details]
picture showing the bug
Comment 5 Frank Reininghaus 2010-12-02 13:49:33 UTC
Thanks, I could reproduce that now in trunk. Another way to reproduce: run "dolphin ~" when the home folder defaults to Columns View.
Comment 6 Frank Reininghaus 2010-12-02 17:29:39 UTC
Just for the record, I can also reproduce this in 4.4.4 and in the 4.5 branch, so it seems it's not a recent regression.
Comment 7 Frank Reininghaus 2010-12-11 14:16:14 UTC
*** Bug 259498 has been marked as a duplicate of this bug. ***
Comment 8 Frank Reininghaus 2010-12-11 14:19:04 UTC
Other ways to reproduce:

1. Open Dolphin, click "Root" in Places Panel, click "tmp" directory -> /tmp is opened in 2nd column, but "Create New..." is disabled.

or

2. Call "dolphin /tmp" from Konsole -> "Create New..." is also disabled.

On the other hand, opening Dolphin and entering "/tmp" in the location bar works as expected - the menu is enabled.
Comment 9 Jim Jones 2010-12-11 16:39:20 UTC
i updated dolphin to the latest svn commit (1205345) - with this version "create new" works - now "create new" is never graid out even not in folders where i have no write permission like in /
i thing the bug can be closed ....
Comment 10 Frank Reininghaus 2010-12-11 20:22:09 UTC
I can confirm that. But I don't think we should close this - the behaviour is still buggy. And I think the relevant code hasn't actually changed much today. I can't explain why the behaviour changed though.
Comment 11 Peter Penz 2010-12-15 19:40:53 UTC
SVN commit 1206749 by ppenz:

Fix issue that the enabled state of the "Create New..." menu is not updated correctly in the column-view.

BUG: 258534
FIXED-IN: 4.6.0


 M  +2 -28     dolphinviewcontainer.cpp  
 M  +0 -2      dolphinviewcontainer.h  
 M  +66 -28    views/dolphinview.cpp  
 M  +23 -0     views/dolphinview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206749
Comment 12 Peter Penz 2010-12-15 19:44:58 UTC
@Frank: The root cause of this issue was that only the root-directory-lister has been considered to determine the writestate. But this does not work in the column-view, as the directory lister changes with each column...

For 4.7 I plan to encapsulate all the directory lister things inside DolphinView and the DolphinViewContainer will have no knowledge about this anymore. It is quite a trivial change in the meantime, but I don't like to do such a change shortly before the release as it is too risky.
Comment 13 Frank Reininghaus 2010-12-15 20:17:30 UTC
@Peter: That sounds good :-)