Fix issue that the enabled state of the "Create New..." menu is not updated correctly in the column-view.

BUG: 258534
FIXED-IN: 4.6.0

svn path=/trunk/KDE/kdebase/apps/; revision=1206749